[gd_scene load_steps=13 format=3 uid="uid://b3ffk0nfiqktt"]

[ext_resource type="Texture2D" uid="uid://d01j2jovpm2fs" path="res://assets/images/Stadium spritesheet.png" id="1_1tk53"]
[ext_resource type="Script" path="res://animations/intro_animation.gd" id="1_adjy7"]
[ext_resource type="AudioStream" uid="uid://k0dghftdubvw" path="res://assets/voice/announcer - ready.mp3" id="2_8ctnq"]
[ext_resource type="Texture2D" uid="uid://cemant0jdtwd7" path="res://assets/images/Announcer.png" id="2_ilj45"]

[sub_resource type="Animation" id="Animation_cj47s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Announcer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Announcer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Crowd:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_q752o"]
resource_name = "announcer - question"
length = 1.6
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Announcer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Announcer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.18, 0.26, 0.34, 0.46, 0.6, 0.68, 0.8, 0.98, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 8, 10, 8, 12, 11, 13, 14, 8, 15]
}

[sub_resource type="Animation" id="Animation_vcxk5"]
resource_name = "announcer - ready"
length = 1.5
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Announcer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1.18),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Announcer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.36, 0.44, 0.48, 0.56, 0.7, 0.82, 0.94, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 3, 0, 4, 5, 0, 6]
}

[sub_resource type="Animation" id="Animation_iq2on"]
resource_name = "announcer - what"
length = 1.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Announcer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Announcer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.34, 0.42, 0.6, 0.76),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_pgfg5"]
resource_name = "crowd - chant"
length = 2.8
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crowd:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Crowd:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.64, 0.9, 1.76, 2.06, 2.38),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_orooc"]
resource_name = "crowd - cheer first"
length = 1.9
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crowd:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Crowd:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.24, 0.48, 0.72, 0.96, 1.2, 1.44, 1.68),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 4, 0, 4, 0, 4, 0, 4]
}

[sub_resource type="Animation" id="Animation_cu5y3"]
resource_name = "crowd - cheer second"
length = 2.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crowd:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Crowd:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.78, 0.84, 0.9, 0.96, 1.02, 1.08, 1.14, 1.2, 1.26, 1.32, 1.38, 1.44, 1.5, 1.56, 1.62, 1.68, 1.74, 1.8, 1.86, 1.92, 1.98, 2.04, 2.1, 2.16, 2.22, 2.28, 2.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4, 0, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dg1bs"]
_data = {
"RESET": SubResource("Animation_cj47s"),
"announcer - question": SubResource("Animation_q752o"),
"announcer - ready": SubResource("Animation_vcxk5"),
"announcer - what": SubResource("Animation_iq2on"),
"crowd - chant": SubResource("Animation_pgfg5"),
"crowd - cheer first": SubResource("Animation_orooc"),
"crowd - cheer second": SubResource("Animation_cu5y3")
}

[node name="IntroAnimation" type="Node2D"]
script = ExtResource("1_adjy7")

[node name="StageTimer" type="Timer" parent="."]

[node name="AnnouncerAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8ctnq")
bus = &"SFX"

[node name="CrowdAudio" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dg1bs")
}

[node name="Crowd" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(9, 9)
texture = ExtResource("1_1tk53")
hframes = 6
frame = 1

[node name="Announcer" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(20.25, 20.25)
texture = ExtResource("2_ilj45")
hframes = 8
vframes = 3
frame = 8

[connection signal="timeout" from="StageTimer" to="." method="_on_stage_timer_timeout"]
